styling for form

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,29 @@
   color: #61dafb;
 }
 
+.meme-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
+
+.meme-form input {
+  width: 40%;
+  margin-bottom: 8px;
+  padding: 8px;
+  border-radius: 8px;
+  border: 1px solid #000;
+}
+
+.meme-form button {
+  padding: 8px; 
+  border-radius: 8px;
+  color: #fff;
+  background-color: #003566;
+  border: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
